<resources>
    <string name="app_name">MusicShopMobileApp</string>
    <string name="exit">Exit</string>
    <string name="Profile">Профиль</string>
    <string name="MusicShopRus">Музыкальный магазин</string>
    <string name="SettingsText">Настройки</string>
    <string name="ApiName">MusicShopMobileApp</string>
    <string name="ApiNameRus">Музыкальный магазин</string>
    <string name="AuthorName">Сидоров Антон Дмитриевич</string>
    <string name="addressUrlDefault">URL</string>
    <string name="urlEdit">Редактировать URL-ссылку</string>
    <string name="Back">Назад</string>
    <string name="Protocol">Протокол</string>
    <string name="Path">Путь</string>
    <string name="DefaultUrlAddress">url.sidorov</string>
    <string name="TextCancel">Отмена</string>
    <string name="TextSave">Сохранить</string>
    <string name="SignIn">Войти</string>
    <string name="SignOut">Выйти</string>
    <string name="Registrate">Зарегистрироваться</string>
    <string name="SignInToSystem">Войти в аккаунт</string>
    <string name="SignOutFromSystem">Выйти из аккаунта</string>
    <string name="Authorization">Авторизация</string>
    <string name="LoginText">Логин</string>
    <string name="PasswordText">Пароль</string>
    <string name="YourLogin">Ваш логин</string>
    <string name="YourRoleRus">Ваша роль</string>
    <string name="YourRoleEng">Your role</string>
    <string name="YourPassword">Ваш пароль</string>
    <string name="ShowPassword">Показывать пароль</string>
    <string name="SaveAccount">Сохранить аккаунт</string>
    <string name="SignInYes">Войти в систему</string>
    <string name="Changepassword">Сменить пароль</string>
    <string name="DropAccount">Удалить аккаунт</string>
    <string name="ProgramInfo">О приложении</string>
    <string name="UserData">Данные пользователя</string>
    <string name="fio">ФИО:</string>
    <string name="Telefons">Телефоны</string>
    <string name="Emails">Email-адреса</string>
    <string name="C">C</string>
    <string name="Plus">+</string>
    <string name="Update">Обновить</string>
    <string name="Categories">Категории</string>
    <string name="StructLine">Линейная</string>
    <string name="StructTree">Древовидная</string>
    <string name="StructCategoriesList">Структура списка категорий</string>
    <string name="Information">Информация</string>

</resources>