<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddressesActivity">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ApiNameRus"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold|italic"  />

    <Button
        android:id="@+id/buttonAdrressesExit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Back"
        android:onClick="Exit"/>

    <Button
        android:id="@+id/button20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Update"
        android:onClick="UpdateAddresses_Click" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editTextAddressEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/Telefons" />

        <Button
            android:id="@+id/button11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/C"
            android:onClick="Clear_Click"/>

        <Button
            android:id="@+id/button12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Plus"
            android:onClick="AddressAdd_Click"/>
    </LinearLayout>

    <TextView
        android:id="@+id/textViewAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textAlignment="center"
        android:textSize="18sp" />

    <ListView
        android:id="@+id/listViewAddresses"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>