<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CategoriesActivity">

    <TextView
        android:id="@+id/textView29"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/MusicShopRus"
        android:textAlignment="center"
        android:textSize="24sp" />

    <Button
        android:id="@+id/button21"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Back"
        android:onClick="Back_Click"/>

    <Button
        android:id="@+id/button22"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Update"
        android:onClick="UpdateCategories_Click"/>

    <TextView
        android:id="@+id/textView30"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Categories"
        android:textSize="20sp"
        android:textAlignment="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView31"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="Фильтры категорий:" />

        <Spinner
            android:id="@+id/spinnerCategoriesFilters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewNowCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView" />

    <TextView
        android:id="@+id/textView32"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/StructCategoriesList"
        android:textAlignment="center" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/radioButtonLine"
            android:layout_width="match_parent"
            android:layout_height="29dp"
            android:text="@string/StructLine"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/radioButtonTree"
            android:layout_width="match_parent"
            android:layout_height="26dp"
            android:text="@string/StructTree" />

    </RadioGroup>

    <TextView
        android:id="@+id/textView33"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Categories"
        android:textAlignment="center"  />

    <ListView
        android:id="@+id/listViewCategories"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>