<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".OrderActivity">


    <TextView
        android:id="@+id/textViewOrderAppName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/MusicShopRus"
        android:textAlignment="center"
        android:textSize="24sp" />

    <Button
        android:id="@+id/buttonProductOrderBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Back"
        android:onClick="Exit"
        android:textAllCaps="false"/>

    <TextView
        android:id="@+id/textViewOrderShow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Заказ"
        android:textAlignment="center"
        android:textSize="14sp"/>

    <Button
        android:id="@+id/button46"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Update"
        android:onClick="Update_Click"
        android:textAllCaps="false" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView44"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Номер - " />

        <TextView
            android:id="@+id/textViewNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="40"
            android:text="TextView" />
    </LinearLayout>

    <Button
        android:id="@+id/button47"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Информация"
        android:textAllCaps="false"
        android:onClick="GetInfo"  />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button48"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Повторить"
            android:onClick="Repeart_Click"  />

        <Button
            android:id="@+id/buttonOrderCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Отменить"
            android:onClick="Cancel_Click"   />
    </LinearLayout>

    <ListView
        android:id="@+id/listViewOrderProducts"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</LinearLayout>