<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/MusicShopRus"
        android:textAlignment="center"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="Пункт получения"
            android:textAllCaps="false"
            app:backgroundTint="@color/light_gray"
            android:onClick="TraidingPoint_Click"/>

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="RunSettings"
            android:text="@string/SettingsText"
            android:textAllCaps="false"
            android:textSize="12sp"
            app:backgroundTint="@color/light_gray" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewLogin"
            android:layout_width="269dp"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textAlignment="viewEnd"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Profile"
            android:textAllCaps="false"
            app:backgroundTint="@color/light_gray"
            app:backgroundTintMode="screen"
            android:onClick="RunProfile"
            android:textSize="12sp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/textViewFIO"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textAlignment="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="Update_Click"
            android:text="@string/Update"
            android:textAllCaps="false"
            android:textSize="12sp"
            app:backgroundTint="@color/light_gray" />

        <Button
            android:id="@+id/button14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Categories"
            android:textAllCaps="false"
            app:backgroundTint="@color/light_gray"
            android:onClick="Categories_Click" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="73dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Название" />

                <EditText
                    android:id="@+id/editTextProductName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="Name"
                    android:textSize="12sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Диапозон скидок:"
                android:textAlignment="center" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <View
                    android:id="@+id/view3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="4" />

                <EditText
                    android:id="@+id/editTextMinDiscount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="0"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/textView26"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="  ...  " />

                <EditText
                    android:id="@+id/editTextMaxDiscount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="100"
                    android:textSize="12sp" />

                <View
                    android:id="@+id/view4"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="4" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView27"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Название:"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/textView28"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Цена без скидки:"
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <View
                    android:id="@+id/view5"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="4" />

                <Spinner
                    android:id="@+id/spinnerNameSort"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3" />

                <View
                    android:id="@+id/view7"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="4" />

                <Spinner
                    android:id="@+id/spinnerPriceSort"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3" />

                <View
                    android:id="@+id/view6"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="4" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="TextView" />

        <TextView
            android:id="@+id/textViewCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="TextView" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/checkBoxHave"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:text="Только в наличии"
            app:checkedState="checked" />

        <Button
            android:id="@+id/button36"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="CartRun_Click"
            android:text="Корзина"
            android:textAllCaps="false"
            android:textSize="12sp"
            app:backgroundTint="@color/light_gray" />

        <Button
            android:id="@+id/button44"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Заказы"
            android:textSize="12sp"
            app:backgroundTint="@color/light_gray"
            android:textAllCaps="false"
            android:onClick="OrdersRun_Click"/>
    </LinearLayout>

    <ListView
        android:id="@+id/listViewProducts"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>